WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
207829
[LFC][IFC] LineLayoutContext::nextContentForLine should be able to handle regular inline boxes
https://bugs.webkit.org/show_bug.cgi?id=207829
Summary
[LFC][IFC] LineLayoutContext::nextContentForLine should be able to handle reg...
alan
Reported
2020-02-16 17:38:37 PST
recently regressed.
Attachments
Patch
(4.75 KB, patch)
2020-02-16 17:43 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-02-16 17:38:55 PST
<
rdar://problem/59498031
>
alan
Comment 2
2020-02-16 17:43:10 PST
Created
attachment 390894
[details]
Patch
WebKit Commit Bot
Comment 3
2020-02-17 12:23:45 PST
Comment on
attachment 390894
[details]
Patch Clearing flags on attachment: 390894 Committed
r256759
: <
https://trac.webkit.org/changeset/256759
>
WebKit Commit Bot
Comment 4
2020-02-17 12:23:47 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug