[LFC][IFC] LineLayoutContext::nextContentForLine should be able to handle regular inline boxes https://bugs.webkit.org/show_bug.cgi?id=207829 <rdar://problem/59498031>

Reviewed by Antti Koivisto.

Source/WebCore:

Test: fast/layoutformattingcontext/simple-inline-block.html

Add missing inline box handling.

* layout/inlineformatting/LineLayoutContext.cpp:
(WebCore::Layout::LineLayoutContext::nextContentForLine):

LayoutTests:

* fast/layoutformattingcontext/simple-inline-block-expected.html: Added.
* fast/layoutformattingcontext/simple-inline-block.html: Added.


Canonical link: https://commits.webkit.org/220818@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@256759 268f45cc-cd09-0410-ab3c-d52691b4dbfc